# learn_rust_with_claude

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  OUTLINE.md  README.md
chapters/01-hello-cargo/: README.md
chapters/01-hello-cargo/project/: Cargo.toml
chapters/02-variables-types/: README.md
chapters/02-variables-types/project/: Cargo.toml
chapters/03-functions-modules/: README.md
chapters/03-functions-modules/project/: Cargo.toml
chapters/04-ownership-part1/: README.md
chapters/05-ownership-part2/: README.md
chapters/06-structs/: README.md
chapters/07-enums-pattern-matching/: README.md
chapters/08-error-handling/: README.md
chapters/09-traits/: README.md
chapters/10-generics/: README.md
chapters/11-closures/: README.md
chapters/12-collections-iterators/: README.md
chapters/13-workspace/: README.md
chapters/14-serde/: README.md
chapters/15-cli-advanced/: README.md
chapters/16-file-io/: README.md
chapters/17-text-toolkit/: README.md
chapters/18-concurrency-basics/: README.md
chapters/19-channels/: README.md
chapters/20-networking/: README.md
chapters/21-multithreaded-server/: README.md
chapters/22-async-intro/: README.md
chapters/23-axum-web/: README.md
chapters/24-http-client/: README.md
chapters/25-final-project/: README.md
chapters/25-final-project/project/: Cargo.toml
chapters/25-final-project/project/src/: main.rs
chapters/appendix-a-cargo-advanced/: README.md
chapters/appendix-b-testing/: README.md
chapters/appendix-c-crate-reference/: README.md
chapters/appendix-d-smart-pointers/: README.md
(+49 files in other folders)
