[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# 这是综合项目的起始模板
# 你可以选择实现以下项目之一：
#
# 1. mini-redis: 更完整的 Redis 实现
# 2. file-sync: 文件同步工具
# 3. log-analyzer: 日志分析管道
#
# 参见 README.md 了解详细需求

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
